stop wrapping product boxes

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
  Author:       Mike Maltby
  Author URI:   http://ingersollrentall.com
  Template:     onepress
- Version:      1.0.35
+ Version:      1.0.36
  License:      GNU General Public License v2 or later
  License URI:  http://www.gnu.org/licenses/gpl-2.0.html
 */
@@ -75,6 +75,7 @@ ul.products[class*=columns-] {
   display: flex;
   padding-bottom: 1.1em;
   padding-right: 1.1em;
+  flex-wrap: wrap;
 }
 
 ul.products[class*=columns-] li.product,
@@ -82,8 +83,8 @@ ul.products[class*=columns-] li.product,
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    width: 25em;
-    margin: 0 1.5em 0 0;
+    width: 15em;
+    margin: .75em auto;
     border: thin solid;
     box-shadow: 0.8em 0.8em 0.8em;
 }
